[package]
name = "hypixel-gui"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
env_logger = "0.10.1"
eframe = "0.26.2"
egui_extras = { version = "0.24.2" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"], default-features = false }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
reywen_http = { version = "0.1.18", default-features = false, features = ["serde", "hyper_engine"]}
material-egui = "0.1.2"