[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
reywen_http = {path = "/home/kaiaxc/Documents/Projects/Reywen/reywen-http", version = "0.1.17", default-features = false, features = ["serde", "hyper_engine"]}
druid = "0.8.3"