[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"], default-features = false }
serde = {version = "1.0.193", features = ["derive"], default-features = false}
serde_json = { version = "1.0.108", default-features = false }
reywen_http = { version = "0.1.18", default-features = false, features = ["serde", "hyper_engine"]}
