[package]
name = "hypixel-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
env_logger = "0.10.1"
eframe = { version = "0.24.1", features = ["wgpu"] }
egui_extras = { version = "0.24.2" }
engine = {path = "../engine"}
tokio = "1.35.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
egui-wgpu = "0.24.1"
